tekton-ci-config/triggers/tekton-eventlistener-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-eventlistener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: el-gitlab-listener # REPLACE WITH YOUR SERVICE NAME FROM STEP 2
              servicePort: 8080
